@@ -296,6 +296,7 @@ copy	= cursfmts.cursorToCopy
 csv	= cursfmts.cursorToCSV
 csv.*	= lambda rs=ruleSuffix,*a,**kw: cursfmts.cursorToCSV(dialect=rs,*a,**kw)
 html	= cursfmts.cursorToHTML
+ddt	    = cursfmts.cursorToDDT
 
 # defaults
 
@@ -321,7 +322,6 @@ ldap	= cursfmts.cursorToLDIF
 
 [DCOracle2.sql_types]
 * = config.Namespace('peak.sql_types')
-
 
 
 
