@@ -2,6 +2,9 @@ Fixes and Enhancements since Version 0.5 alpha 2
 
  Changed, Enhanced, or Newly Deprecated Features
 
+ - Added 'model.Repr' type, useful for doing eval/repr conversions of simple
+   Python types, and changed the N2 'htmldump' command to use it.
+
  - Added 'peak.util.mockets', offering imitation socket services like
    'socket()' and 'select()', allowing socket-based services to be tested
    without using real sockets.
